--- a/consult/less/modal_sign_up_consultation.less
+++ b/consult/less/modal_sign_up_consultation.less
@@ -24,6 +24,7 @@
 			top:30px;
 			cursor: pointer;
 			font-size:1.8rem;
+			z-index: 1;
 			&:hover{
 				color:@sea;
 			}
@@ -216,6 +217,29 @@
 			-o-border-radius:0 0 5px 5px;
 			-moz-border-radius:0 0 5px 5px;
 			-webkit-border-radius:0 0 5px 5px;
+			a{
+				text-decoration: none;
+				font-weight:700;
+				color:@sky;
+				&:hover{
+					text-decoration: underline;
+				}
+			}
+		}
+	}
+	&.light .container{
+		width:500px;
+		form{
+			h5{
+				margin-top: 5px;
+			}
+			textarea{
+				height:80px;
+			}
+			input[type="submit"]{
+				padding: 9px 17px 8px 17px;
+				margin-top: 20px;
+			}	
 		}
 	}
 }
