--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -71,6 +71,12 @@ aside.additional-menu{
 
                     }
                 }
+                & > ul li{
+                    padding-left: 20px;
+                    &:first-child{
+                        border-top:solid 1px #e7f3ee;
+                    }
+                }
             }
         }
     }
