--- a/consult/less/page_faq.less
+++ b/consult/less/page_faq.less
@@ -78,6 +78,9 @@ body.page-faq{
 			}
 			.field{
 				margin-bottom: 20px;
+				textarea{
+					height: 80px;
+				}
 				input, textarea{
 					margin-bottom: 0;
 				}
