Баг с минимальной высотой

--- a/consult/less/page_public_question_list.less
+++ b/consult/less/page_public_question_list.less
@@ -145,8 +145,8 @@ body.page-public-question-list{
                 }
                 .answer-content, .question-content{
                     min-height:100px;
-                    max-height:300px;
-                    overflow: hidden;
+                    //max-height:300px;
+                    //overflow: hidden;
                     .fader{
                         position: absolute;
                         bottom:0;
