--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -535,6 +535,21 @@ body.page-profile-settings{
                                 margin-top:-4px;
                             }
                         }
+                        p.agreement{
+                            color:  #8aa4a2;
+                            font-size: 1.2rem;
+                            font-style: italic;
+                            padding:15px 20px 0 20px;
+                            display: block;
+                            a{
+                                font-weight:500;
+                                text-decoration: none;
+                                color:@sky;
+                                &:hover{
+                                    text-decoration: underline;
+                                }
+                            }
+                        }
                         .info{
                             border-top:solid 1px #b9d4cc;
                             background: #f8f8f8;
